# Area_51

./: .dockerignore  .gitignore  Dockerfile  Makefile  PROTOCOLO_ANOTACAO.md  README.md  coords_converter.py  docker-compose.dev.yml  docker-compose.yml  fix_files.py  main.py  pyproject.toml  requirements-dev.txt  requirements-docker.txt  requirements.txt
config/: logging_config.py  settings.py
docs/: ARCHITECTURE.md  MODEL_ARTIFACTS.md  MODEL_CARD.md  TROUBLESHOOTING.md  USAGE.md  architecture.md  deployment.md  user-guide.md
scripts/: annotate_boxes.py  audit_bootstrap_dataset.py  audit_labels.py  audit_yolo_dataset.py  build_ml_dataset.py  build_operational_feature_store.py  build_synthetic_loss_heatmap.py  build_synthetic_loss_map.py  detect_and_count.py  download_tiles.py  explain_ml_ranking.py  fix_yolo_labels.py  fix_yolo_split_duplicates.py  generate_final_socioenergy_scores.py  generate_losses_dashboard.py  generate_realistic_operational_map.py  generate_report.py  generate_socioenergy_dashboard.py  generate_transformer_operational_map.py  import_concessionaria_csvs.py  import_cras_territories.py  import_ibge_sectors.py  import_icc_irregularities.py  import_monthly_losses.py  import_solar_estimates.py  import_synthetic_feeder_operational_data.py  import_synthetic_loss_agent_data.py  import_territory_links.py  inspect_model_artifacts.py  label_simple.py  label_tiles.py  prepare_yolo_dataset.py  run_inference.py  seed_data.py  seed_demo_data.py  seed_realistic_demo_db.py  tile_image.py  train_bootstrap.py  train_ml_baseline.py  train_synthetic_loss_classifier.py  (+2 more)
(+330 files in other folders)
